<resources>
    <string name="app_name">FoodieApp</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="text_all">All</string>
    <string name="text_chicken">Chicken</string>
    <string name="text_fish">Fish</string>
    <string name="text_noodle">Noodle</string>
    <string name="text_beef">Beef</string>
    <string name="text_spaghetti">Spaghetti</string>
    <string name="text_salad">Salad</string>
    <string name="text_categories">Categories</string>
    <string name="text_header">Let\'s Search for\nDelicious Foods Recipe</string>
    <string name="food_time">%s minutes</string>
    <string name="text_ingredients">Ingredients</string>
    <string name="text_nutrients">Nutrients</string>
    <string name="text_add_favorite">Add to Favorite</string>
    <string name="text_message_dialog">Do you want to add %s to favorite?</string>
    <string name="text_yes_dialog">YES</string>
    <string name="text_no_dialog">NO</string>
    <string name="text_added_to_favorite">Food added to Favorites</string>
    <string name="description_food_image">Food Image</string>
    <string name="description_back_arrow">Back Arrow</string>
    <string name="description_favorite_icon">Favorite Icon</string>
</resources>